--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/user/list/">用户管理</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/prettynum/list/">靓号管理</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
