--- a/app/templates/prettynum_list.html
+++ b/app/templates/prettynum_list.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <div style="margin-bottom: 10px">
-            <a class="btn btn-success" href="/user/add/">新建用户ModuleForm</a>{# target="_blank" target添加为跳转到新页面 #}
+            <a class="btn btn-success" href="/prettynum/add/">新建靓号ModuleForm</a>{# target="_blank" target添加为跳转到新页面 #}
         </div>
         <div class="panel panel-default">
             <!-- Default panel contents -->
@@ -13,7 +13,7 @@
                     <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zm0-1a8 8 0 1 1 0 16A8 8 0 0 1 8 0z"/>
                     <path d="M4.285 6.433a.5.5 0 0 0 .683-.183A3.498 3.498 0 0 1 8 4.5c1.295 0 2.426.703 3.032 1.75a.5.5 0 0 0 .866-.5A4.498 4.498 0 0 0 8 3.5a4.5 4.5 0 0 0-3.898 2.25.5.5 0 0 0 .183.683zM7 9.5C7 8.672 6.552 8 6 8s-1 .672-1 1.5.448 1.5 1 1.5 1-.672 1-1.5zm4 0c0-.828-.448-1.5-1-1.5s-1 .672-1 1.5.448 1.5 1 1.5 1-.672 1-1.5z"/>
                 </svg>
-                用户列表
+                靓号列表
             </div>
 
             <!-- Table -->
@@ -21,27 +21,21 @@
                 <thead>
                 <tr>
                     <th>ID</th>
-                    <th>姓名</th>
-                    <th>密码</th>
-                    <th>性别</th>
-                    <th>年龄</th>
-                    <th>账户余额</th>
-                    <th>部门</th>
-                    <th>入职时间</th>
+                    <th>电话</th>
+                    <th>价格</th>
+                    <th>会员等级</th>
+                    <th>状态</th>
+                    <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for info in userinfo %}
+                {% for inf in info %}
                     <tr>
-                        <th>{{ info.id }}</th>
-                        <th>{{ info.name }}</th>
-                        <th>{{ info.password }}</th>
-                        <th>{{ info.get_gender_display }}</th>
-
-                        <th>{{ info.age }}</th>
-                        <th>{{ info.account }}</th>
-                        <th>{{ info.depart.title }}</th>
-                        <th>{{ info.create_time|date:"Y-m-d" }}</th>{# 模板语法中时间处理方式 #}
+                        <th>{{ inf.id }}</th>
+                        <th>{{ inf.mobile }}</th>
+                        <th>{{ inf.price }}</th>
+                        <th>{{ inf.get_level_display}}</th>
+                        <th>{{ inf.get_status_display }}</th>
                         <td>
                             <a class="btn btn-primary btn-xs" href="/user/{{ info.id }}/update">编辑</a>
                             <a class="btn btn-danger btn-xs" href="/user/{{ info.id }}/delete">删除</a>
@@ -52,6 +46,9 @@
             </table>
         </div>
     </div>
+
+
+
 
 
 
