--- a/app/templates/prettynum_list.html
+++ b/app/templates/prettynum_list.html
@@ -37,8 +37,8 @@
                         <th>{{ inf.get_level_display}}</th>
                         <th>{{ inf.get_status_display }}</th>
                         <td>
-                            <a class="btn btn-primary btn-xs" href="/user/{{ info.id }}/update">编辑</a>
-                            <a class="btn btn-danger btn-xs" href="/user/{{ info.id }}/delete">删除</a>
+                            <a class="btn btn-primary btn-xs" href="/prettynum/{{ inf.id }}/update">编辑</a>
+                            <a class="btn btn-danger btn-xs" href="/prettynum/{{ inf.id }}/delete">删除</a>
                         </td>
                     </tr>
                 {% endfor %}
