--- a/app/templates/prettynum_list.html
+++ b/app/templates/prettynum_list.html
@@ -5,6 +5,13 @@
         <div style="margin-bottom: 10px">
             <a class="btn btn-success" href="/prettynum/add/">新建靓号ModuleForm</a>{# target="_blank" target添加为跳转到新页面 #}
         </div>
+        <div style="float: right">
+            <form class="d-flex" role="search" method="get">
+                <input class="form-control me-2" name="query" type="search" placeholder="手机号" aria-label="Search" value={{ search }}>
+                <button class="btn btn-outline-success" type="submit">搜索</button>
+            </form>
+        </div>
+
         <div class="panel panel-default">
             <!-- Default panel contents -->
             <div class="ant-calendar-month-panel-header">
@@ -15,6 +22,7 @@
                 </svg>
                 靓号列表
             </div>
+
 
             <!-- Table -->
             <table class="table">
@@ -34,7 +42,7 @@
                         <th>{{ inf.id }}</th>
                         <th>{{ inf.mobile }}</th>
                         <th>{{ inf.price }}</th>
-                        <th>{{ inf.get_level_display}}</th>
+                        <th>{{ inf.get_level_display }}</th>
                         <th>{{ inf.get_status_display }}</th>
                         <td>
                             <a class="btn btn-primary btn-xs" href="/prettynum/{{ inf.id }}/update">编辑</a>
