1、将页签中添加分页功能 2、将搜索功能和分页结合

--- a/app/templates/depart_list.html
+++ b/app/templates/depart_list.html
@@ -39,5 +39,10 @@
                 </tbody>
             </table>
         </div>
+      <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {{ depart_page }}
+            </ul>
+        </nav>
     </div>
 {% endblock %}
