--- a/app/templates/user_list.html
+++ b/app/templates/user_list.html
@@ -51,6 +51,11 @@
                 </tbody>
             </table>
         </div>
+      <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {{ user_page }}
+            </ul>
+        </nav>
     </div>
 
 
