--- a/app/templates/prettynum_list.html
+++ b/app/templates/prettynum_list.html
@@ -38,7 +38,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for inf in info %}
+                {% for inf in queryset %}
                     <tr>
                         <th>{{ inf.id }}</th>
                         <th>{{ inf.mobile }}</th>
