--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,10 +30,11 @@
     <!-- Custom styles for this template -->
     <link href="../static/plugin/bootstrap-5.1.3-dist/css/signin.css" rel="stylesheet">
 </head>
-<body class="text-center">
+<body class="text-center" >
 
-<main class="form-signin">
-    <form>
+<main class="form-signin" >
+    <form novalidate method="post">
+    {% csrf_token %}
         <img class="mb-4" src="../static/img/drink.gif" alt="" width="240" height="64">
         <h1 class="h3 mb-3 fw-normal">你 进来呀！</h1>
 
@@ -42,7 +43,7 @@
               {{ forms }}
 {#            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">#}
             <label>{{ forms.label }}</label>
-
+            <span style="color: red">{{ forms.errors.0 }}</span>
         </div>
         {% endfor %}
 {#        <div class="form-floating">#}
