--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -37,13 +37,10 @@
                 </li>
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">登录</a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
-                        当前用户
+                        {{ request.session.info.username }} {# 模板中每次传入的request都是可以用为参数 #}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">个人资料</a></li>
@@ -51,7 +48,7 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">注销</a></li>
+                        <li><a class="dropdown-item" href="/logout/">注销</a></li>
                     </ul>
                 </li>
             </ul>
