--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -35,6 +35,9 @@
                  <li class="nav-item">
                     <a class="nav-link" href="/prettynum/list/">靓号管理</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/task/list/">任务管理</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
