--- a/app/templates/task_list.html
+++ b/app/templates/task_list.html
@@ -7,7 +7,7 @@
             <div class="panel-body">
                 <form id="tasklist" novalidate><!--novalidate去掉界面信息判断-->
                     {% for obj in form %}
-                        <div class="col-xs-6" >
+                        <div class="col-xs-6">
                             <label>{{ obj.label }}</label>
                             {{ obj }}
                             <span class="error-msg" style="color:red"></span>
@@ -19,6 +19,37 @@
                 </form>
             </div>
         </div>
+        <div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>标题</th>
+                    <th>级别</th>
+                    <th>负责人</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for obj in queryset %}
+                    <tr>
+                        <th>{{ obj.id }}</th>
+                        <td>{{ obj.title }}</td>
+                        <td>{{ obj.get_level_display }}</td>
+                        <td>{{ obj.user.username }}</td>
+                        <td>
+                            <a class="btn btn-primary btn-xs" href="#">编辑</a>
+                            <a class="btn btn-danger btn-xs" href="#">删除</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+       <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {{ page_string }}
+            </ul>
+        </nav>
 
         <hr/>
         <h3>ajax范例</h3>
@@ -128,6 +159,8 @@
                             console.log(res.status)
                             if (res.status) {
                                 alert("添加成功")
+                                //js实现页面刷新
+                                location.reload()
                             } else {
                                 $.each(res.error, function (name, data) {
                                     //   console.log(name,data);
